sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:8: error: Boolean does not take parameters
      echanger(i, i+1)
              ^